# agent-hub

./: .gitignore  CODEBUDDY.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  database.py  deps.py  logging_conf.py  main.py  models.py  schemas.py  security.py  seed.py
backend/app/providers/: __init__.py  adp.py  base.py  mock.py  registry.py  ssrf.py  tencent_lke.py
backend/app/repositories/: __init__.py  base.py  sqlalchemy_impl.py
backend/app/routers/: __init__.py  auth.py  dashboard.py  projects.py  providers.py  users.py
backend/app/services/: __init__.py  conversations.py  dashboard.py  normalize.py  sync.py  sync_jobs.py
backend/tests/: conftest.py  test_api.py  test_repositories.py
docs/plans/: 2026-06-21-admin-panel-projects-design.md  2026-06-21-conversation-records-panel-design.md  2026-06-21-conversation-stats-charts-design.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  types.ts
frontend/src/api/: http.ts  index.ts
frontend/src/components/: ConversationStatsPanel.vue  TokenBarChart.vue
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  project.ts
frontend/src/styles/: main.css
frontend/src/views/: ConversationsView.vue  DashboardView.vue  LoginView.vue
frontend/src/views/admin/: ProjectsView.vue  ProvidersView.vue  UsersView.vue
